--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Description: This package implements posterior computaiton algorithms for a wide
 License: GPL
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 1.0.7), glmnet, horseshoe
+Imports: Rcpp (>= 1.0.7), glmnet, horseshoe, pgdraw
+Includes: Rcpp
 LinkingTo: Rcpp, RcppArmadillo
-Depends: Rcpp (>= 1.0.7), RcppArmadillo, glmnet, horseshoe
+Depends: Rcpp (>= 1.0.7), RcppArmadillo, glmnet, horseshoe, pgdraw
 RoxygenNote: 7.1.2
