--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,19 @@ export(fast_horseshoe_hd_lm)
 export(fast_horseshoe_lm)
 export(fast_horseshoe_logit)
 export(fast_horseshoe_ss_lm)
+export(fast_mfvb_multiclass)
 export(fast_mfvb_normal_lm)
+export(fast_mfvb_normal_logit)
 export(fast_normal_lm)
 export(fast_normal_logit)
+export(fast_normal_logit_single_gibbs)
 export(fast_normal_multiclass)
 export(log1mexpm)
 export(log1pexp)
 export(predict_fast_lm)
 export(predict_fast_logit)
 export(predict_fast_mfvb_lm)
+export(predict_fast_mfvb_logit)
 export(rand_left_trucnorm)
 export(rand_left_trucnorm0)
 export(rand_right_trucnorm)
@@ -22,6 +26,7 @@ export(sim_linear_reg)
 export(sim_logit_reg)
 export(sim_logit_reg_R)
 export(sim_multiclass_reg)
+export(train_test_splits)
 export(wrap_glmnet)
 export(wrap_horseshoe)
 importFrom(Rcpp,evalCpp)
