--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(fast_mfvb_normal_logit_single)
 export(fast_normal_lm)
 export(fast_normal_logit)
 export(fast_normal_logit_single_gibbs)
+export(fast_normal_multi_lm)
 export(fast_normal_multiclass)
 export(fast_normal_multiclass_single_gibbs)
 export(log1mexpm)
@@ -22,6 +23,7 @@ export(predict_fast_lm)
 export(predict_fast_logit)
 export(predict_fast_mfvb_lm)
 export(predict_fast_mfvb_logit)
+export(predict_fast_multi_lm)
 export(predict_fast_multiclass)
 export(rand_left_trucnorm)
 export(rand_left_trucnorm0)
@@ -29,6 +31,7 @@ export(rand_right_trucnorm)
 export(scalable_normal_logit_single_gibbs)
 export(scalable_normal_multiclass_single_gibbs)
 export(sim_linear_reg)
+export(sim_linear_reg_multi)
 export(sim_logit_reg)
 export(sim_logit_reg_R)
 export(sim_multiclass_reg)
