Include function fast_normal_lm_sel for variable selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fast_mfvb_normal_lm)
 export(fast_mfvb_normal_logit)
 export(fast_mfvb_normal_logit_single)
 export(fast_normal_lm)
+export(fast_normal_lm_sel)
 export(fast_normal_logit)
 export(fast_normal_logit_single_gibbs)
 export(fast_normal_multi_lm)
@@ -36,6 +37,7 @@ export(sim_logit_reg)
 export(sim_logit_reg_R)
 export(sim_multiclass_reg)
 export(sparse_normal_logit_single_gibbs)
+export(special_rmvnorm)
 export(train_test_splits)
 export(wrap_glmnet)
 export(wrap_horseshoe)
